removed excess from template

--- a/jsocial-frontend/src/app/app.component.html
+++ b/jsocial-frontend/src/app/app.component.html
@@ -1,12 +1,2 @@
 <app-nav></app-nav>
-
-<!-- <app-first></app-first>> -->
-
-<!-- <app-bean [in]="appComponentBean"></app-bean>
-<app-bean [in]="bean2"></app-bean> -->
-
-<!-- <app-bean *ngFor="let bean of beans" [in]="bean"></app-bean> -->
-
-<!-- <app-pokemon></app-pokemon> -->
-
-<app-user *ngFor="let user of users" [in]="user"></app-user>
+<app-first></app-first>
